--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A thin NodeJS wrapper around Denon's Hi-Fi Remote",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tape -r ./test/setup.js 'lib/**/*.spec.js' | tap-spec --color",
+    "test:watch": "tape-watch -w -r ../test/setup.js 'lib/**/*.spec.js' -p tap-spec --color"
   },
   "repository": {
     "type": "git",
