--- a/package.json
+++ b/package.json
@@ -33,10 +33,5 @@
     "eslint-plugin-jsx-a11y": "^2.2.2",
     "eslint-plugin-react": "^6.3.0"
   },
-  "dependencies": {
-    "es6-promise": "^4.0.3",
-    "isomorphic-fetch": "^2.2.1",
-    "xml": "^1.0.1",
-    "xml2js": "^0.4.17"
-  }
+  "dependencies": {}
 }
