--- a/package.json
+++ b/package.json
@@ -22,16 +22,22 @@
     "babel-config-adambrgmn": "^0.1.4",
     "babel-eslint": "^7.0.0",
     "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.16.0",
+    "babel-register": "^6.16.3",
+    "blue-tape": "^1.0.0",
     "eslint": "^3.7.0",
     "eslint-config-adambrgmn": "^0.3.2",
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-import": "^2.0.0",
     "eslint-plugin-jsx-a11y": "^2.2.2",
-    "eslint-plugin-react": "^6.3.0"
+    "eslint-plugin-react": "^6.3.0",
+    "tap-spec": "^4.1.1",
+    "tape": "^4.6.2",
+    "tape-watch": "^2.2.3"
   },
   "dependencies": {}
 }
