--- a/package.json
+++ b/package.json
@@ -39,5 +39,7 @@
     "tape": "^4.6.2",
     "tape-watch": "^2.2.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "bluebird": "^3.4.6"
+  }
 }
