--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "tape-watch": "^2.2.3"
   },
   "dependencies": {
-    "bluebird": "^3.4.6"
+    "bluebird": "^3.4.6",
+    "cross-spawn": "^4.0.2",
+    "evilscan": "^1.0.2",
+    "ramda": "^0.22.1"
   }
 }
