--- a/.eslintrc
+++ b/.eslintrc
@@ -6,5 +6,8 @@
     "browser": true,
     "es6": true
   },
-  "plugins": ["babel", "import", "jsx-a11y", "react"]
+  "plugins": ["babel", "import", "jsx-a11y", "react"],
+  "rules": {
+    "babel/new-cap": 0
+  }
 }
