--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "bluebird": "^3.4.6",
     "cross-spawn": "^4.0.2",
     "evilscan": "^1.0.2",
-    "ramda": "^0.22.1"
+    "ramda": "^0.22.1",
+    "stampit": "^3.0.2"
   }
 }
